--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -23,7 +24,12 @@
     ],
     "rules": {
         "linebreak-style": ["off"],
+        "max-len": ["off"],
         "arrow-body-style": ["off"],
-        "react/jsx-filename-extension": ["off"]
+        "object-curly-newline": ["off"],
+        "react/jsx-filename-extension": ["off"],
+        "react/state-in-constructor": ["off"],
+        "react/prefer-stateless-function": ["off"],
+        "react/require-default-props": ["off"]
     }
 }
