--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "proxy": "http://localhost:9000",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.10",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "prop-types": "^15.7.2",
