--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
         "object-curly-newline": ["off"],
         "react/jsx-filename-extension": ["off"],
         "react/prop-types": ["off"],
+        "react/no-unescaped-entities": ["off"],
         "react/state-in-constructor": ["off"],
         "react/prefer-stateless-function": ["off"],
         "react/require-default-props": ["off"]
